# Sign_to_sub

./: .gitignore  .gitmodules  Big_Progress.md  PROJECT_PROGRESS_DEEP.md  PROJECT_PROGRESS_DEEP_TH.md  Presentation_Task1_Update.md  Progress_04052026.md  Progress_09052026.md  Progress_16052026.md  Progress_20042026.md  Progress_26042026.md  README.md  README_TH.md  SEA_Pipeline_Guide_TH.md  presentation_12052026.md  pyproject.toml  requirements-eval.txt  requirements.txt  script.md  sea_report_th_out.txt
ForcedAlignment/: Gloss_Labeling_Report_Filled.docx  Gloss_Labeling_Template.docx  PLAN_ForcedAlignment_Task2.md  README.md  check_eaf_video_match.py  create_comparison_eafs.py  evaluate_fa_dataset.py  fill_gloss_labeling_template.py  fix_eaf_media_paths.py  run_forced_alignment.py
ForcedAlignment/elan_forced_alignment/: 1.eaf  1.pfsx  10.eaf  100.eaf  1000.eaf  1001.eaf  1002.eaf  1003.eaf  1004.eaf  1005.eaf  1006.eaf  1007.eaf  1008.eaf  1009.eaf  101.eaf  1010.eaf  1011.eaf  1012.eaf  1013.eaf  1014.eaf  1015.eaf  1016.eaf  1017.eaf  1018.eaf  1019.eaf  102.eaf  1020.eaf  1021.eaf  1022.eaf  1023.eaf  1024.eaf  1025.eaf  1026.eaf  1027.eaf  1028.eaf  1029.eaf  103.eaf  1030.eaf  1031.eaf  1032.eaf  (+1100 more)
ForcedAlignment/output/: manifest.csv  video_ids_emb.txt  video_ids_seg.txt
SEA/: LICENSE  README.md  align.py  align_dp.py  align_dp_dtw.py  align_dp_visualization.py  align_similarity.py  config.py  environment.yml  segmentation.py  utils.py
SEA/How2Sign/: fps_summary.csv  make_subtitles.py  summarize_fps.py
SEA/data/: bobsl_align.txt  bobsl_align_test_1.txt  bobsl_align_test_bad.txt  bobsl_align_train_1.txt  bobsl_align_val_1.txt  how2_align_test.txt  how2_align_train.txt  how2_align_val.txt  how2_align_val_1.txt  mitenand_align.txt  mitenand_align_filtered.txt  mitenand_align_test.txt  mitenand_align_val.txt  srf_align.txt  srf_align_test.txt  srf_align_test_1.txt  srf_align_train.txt  srf_align_val.txt  video_text_dataset.py  youtube_asl_1.txt  youtube_asl_prepare.py  youtube_asl_split.py  youtube_asl_train.txt  youtube_asl_val.txt  youtube_bsl_1.txt  youtube_bsl_split.py  youtube_bsl_train.txt  youtube_bsl_val.txt  youtube_fps.py
SEA/figures/: make_figure.py  make_figure_method.py  make_figure_teaser.py
SEA/misc/: evaluate_sub_alignment.py  postprocessing_remove_intersections.py
SEA/mitenand/: unify_subtitles_from_hfh.py  unify_subtitles_from_swisstxt.py  unify_subtitles_make_parallel.py
SEA/scripts/: check_youngjoon_subtitles.py  create_lmdb_gul.py  evaluate.sh  extract_pseudo_glosses_from_lmdb.py  fix_cslr_annotation.py  preprocess_subtitles.py
arXiv-2512.08094v1/: 00README.json  acl_latex.tex  custom.bib  shortstrings.bib
example_alignment/: 04.vtt  README_TH.md  Test.eaf  Test.pfsx  Test_best.eaf  Test_best.pfsx  Test_comparison.eaf  Test_comparison.pfsx  Test_task2_comparison.eaf  Test_task2_comparison.pfsx  add_best_to_eaf.py  add_vtt_tiers_to_eaf.py  align_gloss_labels.py  evaluate_all.py  evaluate_all_to_csv.py  evaluate_gloss_labeling.py  evaluation_gloss_labeling.csv  evaluation_task1_results.csv  extract_cc_from_eaf.py  fix_overlap_vtt.py  gloss_labels_pred.csv  gloss_labels_pred.vtt  make_gloss_cc_vtt.py  make_gloss_input_tier.py  make_task2_comparison_eaf.py  merge_cc_to_updated_eaf.py  plot_alignment.py  run_task2_per_sentence.py  การเปรียบเทียบและเรียงลำดับ (11.07 นาที).eaf  การเปรียบเทียบและเรียงลำดับ (11.07 นาที).pfsx  การเปรียบเทียบและเรียงลำดับ (11.07 นาที)_comparison.eaf  การเปรียบเทียบและเรียงลำดับ (11.07 นาที)_comparison.pfsx  การเปรียบเทียบและเรียงลำดับ (11.07 นาที)_comparison_27042026.eaf
example_alignment/ablation/: 04_gloss_pred__Gloss.eaf  04_gloss_pred__Gloss.pfsx  04_gloss_pred__Gloss_Input.eaf  diagnostics.json  gloss_labels_pred__Gloss.csv
example_alignment/ablation_per_sentence/: 04_gloss_pred__per_sentence.eaf  04_gloss_pred__per_sentence.pfsx  boundaries.csv  evaluation_gloss_labeling__per_sentence.csv  gloss_labels_pred__per_sentence.csv  gloss_labels_pred__per_sentence.vtt
example_alignment/aligned_output/: 04.vtt
example_alignment/aligned_output_asl_b2/: 04.vtt  04_no_overlap.vtt
example_alignment/aligned_output_asl_gloss/: 04.vtt  04_no_overlap.vtt
example_alignment/aligned_output_asl_gloss_word/: 04.vtt  04_no_overlap.vtt
example_alignment/aligned_output_multi_b2/: 04.vtt  04_no_overlap.vtt
example_alignment/aligned_output_multi_gloss/: 04.vtt  04_no_overlap.vtt
example_alignment/subtitles/: 04.vtt
notebooks/: example_alignment_usage.ipynb
patches/: README.md  fairseq_signclip_windows.patch
report/: sea_report.aux  sea_report.out  sea_report.tex  sea_report.toc  sea_report_th.aux  sea_report_th.out  sea_report_th.tex  sea_report_th.toc  sea_report_th_out.txt
(+25 files in other folders)
