[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sea-subtitle-aligner"
version = "0.1.0"
description = "Segment, Embed, and Align: subtitle-to-signing alignment (arXiv:2512.08094)"
requires-python = ">=3.12"
dependencies = [
    # Core numerics
    "numpy==1.26.4",
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "numba==0.62.1",
    "llvmlite==0.45.1",
    # Deep learning
    "torch==2.6.0",
    "torchaudio==2.6.0",
    "transformers==4.51.2",
    "safetensors==0.5.3",
    "huggingface-hub==0.30.2",
    "tokenizers==0.21.1",
    "sentence-transformers",
    # Sign-language specific
    "mediapipe==0.10.21",
    "pose-format==0.9.0",
    "sign-language-segmentation==0.0.1",
    # Subtitle / ELAN I/O
    "webvtt-py==0.4.6",
    "pysrt==1.1.2",
    "pympi-ling==1.71",
    "lxml==5.3.2",
    # Vision / plotting
    "opencv-python==4.8.0.74",
    "matplotlib==3.10.1",
    "pillow==11.2.1",
    # Data utilities
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "tabulate==0.9.0",
    # Config / misc
    "pyyaml==6.0.2",
    "omegaconf==2.0.5",
    "hydra-core==1.0.7",
    "packaging==24.2",
    "sacrebleu==2.5.1",
    "sentencepiece==0.2.0",
    "srt==3.5.3",
    "beartype==0.22.8",
    "protobuf==4.25.6",
    "requests==2.32.3",
    # Jupyter
    "jupyter",
    "ipykernel",
    "ipywidgets",
]

[project.optional-dependencies]
# CUDA-specific packages — only needed when a CUDA GPU is available.
# Install with: uv sync --extra cuda
cuda = [
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvrtc-cu12==12.4.127",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
    "triton==3.2.0",
]

# ── Custom git sources ──────────────────────────────────────────────────────
# sign-language-segmentation is not on PyPI; it lives on a custom branch of
# the public segmentation repo.
[tool.uv.sources]
sign-language-segmentation = { git = "https://github.com/J22Melody/segmentation", rev = "bsl" }

[tool.hatch.build.targets.wheel]
packages = ["SEA"]
