[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sea-subtitle-aligner"
version = "0.1.0"
description = "Segment, Embed, and Align: subtitle-to-signing alignment (arXiv:2512.08094)"
requires-python = ">=3.12"
dependencies = [
    # Core numerics
    "numpy==1.26.4",
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "numba==0.62.1",
    "llvmlite==0.45.1",
    # Deep learning
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "transformers==4.51.2",
    "safetensors==0.5.3",
    "huggingface-hub==0.30.2",
    "tokenizers==0.21.1",
    "sentence-transformers",
    # Sign-language specific
    "mediapipe==0.10.21",
    "pose-format==0.9.0",
    "sign-language-segmentation==0.0.1",
    # Subtitle / ELAN I/O
    "webvtt-py==0.4.6",
    "pysrt==1.1.2",
    "pympi-ling==1.71",
    "lxml==5.3.2",
    # Vision / plotting
    "opencv-python==4.8.0.74",
    "matplotlib==3.10.1",
    "pillow==11.2.1",
    # Data utilities
    "pandas==2.2.3",
    "tqdm==4.67.1",
    "tabulate==0.9.0",
    # Config / misc
    "pyyaml==6.0.2",
    "omegaconf==2.0.5",
    "hydra-core==1.0.7",
    "packaging==24.2",
    "sacrebleu==2.5.1",
    "sentencepiece==0.2.0",
    "srt==3.5.3",
    "beartype==0.22.8",
    "protobuf==4.25.6",
    "requests==2.32.3",
    # Jupyter
    "jupyter",
    "ipykernel",
    "ipywidgets",
]

# ── PyTorch index (CUDA 12.8 wheels) ─────────────────────────────────────────
# Fetches torch/torchaudio from the official PyTorch CUDA 12.8 wheel server
# instead of PyPI (which only carries the CPU-only build).
# PyTorch 2.7.0 + CUDA 12.8 is the first release with native Blackwell (sm_120)
# kernel support for RTX 50xx GPUs (RTX 5060 Ti = GB206, sm_120).
# On Windows the CUDA runtime DLLs are bundled inside the wheel — no separate
# nvidia-* packages are needed (those are Linux-only).
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# ── Custom package sources ────────────────────────────────────────────────────
[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
sign-language-segmentation = { git = "https://github.com/J22Melody/segmentation", rev = "bsl" }

[tool.hatch.build.targets.wheel]
packages = ["SEA"]
